<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.example.trasuatuananh.ui.register.user.RegisterContract.View" />

        <variable
            name="presenter"
            type="com.example.trasuatuananh.ui.register.user.RegisterContract.Presenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_page"
        android:clickable="true"
        android:focusable="true">

        <com.example.trasuatuananh.widget.toolbar.CommonToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_register" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_white_radius_12"
            android:paddingStart="16dp"
            android:paddingTop="40dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.example.trasuatuananh.widget.edittext.ClearableTextInput
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/edit_full_name"
                app:labelTitle="@string/full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textInput="@={presenter.userName}" />

            <com.example.trasuatuananh.widget.edittext.number.ClearableNumberInput
                android:id="@+id/edtAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hint="@string/edit_account"
                app:labelTitle="@string/account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtFullName"
                app:textInput="@={presenter.account}" />

            <com.example.trasuatuananh.widget.edittext.ClearableTextInput
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hint="@string/edit_pass_word"
                app:labelTitle="@string/pass_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAccount"
                app:textInput="@={presenter.password}" />

            <Button
                android:id="@+id/btnConfirm"
                style="@style/Button.New.Primary"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> presenter.register()}"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Button.New.Secondary"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> view.onBackClicked()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnConfirm"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>