<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.example.trasuatuananh.ui.home.location.bottomsheet.SelectAddressContract.Presenter" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_10_radius_0_border"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <View
            android:id="@+id/viewTop"
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_e7e7e7_1000_radius_no_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/text_title_sm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/choose_location"
                android:textColor="@color/text_strong" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_close_24"
                app:tint="@color/gray_text_594B45" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_alpha_border_6" />

        <TextView
            style="@style/text_body_md_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{presenter.chooseProvinceCity()}"
            tools:text="@string/choose_province_city" />

        <TextView
            style="@style/text_body_md_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{presenter.chooseDistrict()}"
            android:visibility="@{presenter.isChooseDistrict()? View.VISIBLE : View.GONE}"
            tools:text="@string/choose_district" />

        <TextView
            style="@style/text_body_md_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{presenter.chooseWard()}"
            android:visibility="@{presenter.isChooseWard()? View.VISIBLE : View.GONE}"
            tools:text="@string/choose_ward" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <View
            android:id="@+id/viewLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/black_alpha_border_6"
            android:elevation="1dp" />


        <TextView
            android:id="@+id/btnContinue"
            style="@style/Button.New.Primary"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:elevation="1dp"
            android:text="@string/confirm" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>